#                    "Merged from", "Cleanup", "Issue", "Adjustment"           #
################################################################################
          1         2         3         4         5         6         7
01234567890123456789012345678901234567890123456789012345678901234567890123456789
-----------------+-----------+--------------------------------------------------

DG-2011-03-16-0: Cleanup:    Fixed qhost test in order to support new output
                             (GE-3370).
                 Review:     TBD

JG-2011-03-16-0: Enhancem.:  testsuite shall build the man pages
                 Issue:      TS-355
                 Review:     DG (TS-7)

SH-2011-03-04-0: Bugfix:     Added UGE-Extension support to the TS
                 Issue:      TS-350
                 Review:     EB,HP (TS-6)

JG-2011-03-03-2: Bugfix:     installation was broken by JG-2011-03-03-1 when
                             gridengine_version 80 is used

JG-2011-03-03-1: Enhancem.:  introduce gridengine_version 80, update version
                             parsing
                 Issue:      TS-342
                 Review:     EB (TS-4)

JG-2011-03-03-0: Cleanup:    remove testsuite code for outdated versions, join
                             version dependent files into one version
                             independent file
                 Issue:      TS-332
                 Review:     DG (TS-3)

JG-2011-02-28-0: Enhancem.:  Add test_sge_string module test.

EB-2011-02-27-0: Bugfix:     - fixed TS issues for darwin-x64
                             - fixed framework issues that caused qrsh to fail
                             - added gitignore file
                             - replaced incorrect email address stored in sge_ar
                 Review:     TBD

DG-2011-02-24-0: Enhancem.:  New test for GE-3233
                 Issue:      TS-326
                 Review:     SH (TS-1)

DG-2011-02-23-0: Bugfix:     Fixed jsv_ge_add test.