@@ -5,3 +5,4 @@ config
 results
 src/tags
 defaults.sav*
+pkg/*
